--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,22 @@ body, .app {
   font-size: 0;
 }
 
+.loading {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50px;
+  width: 100px;
+  height: 100px;
+  background-image: url('./icons/loading.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100px;
+  font-size: 0;
+}
+
 /* search page */
 
 .search-books-bar {
